Added clear note/title function. Fixed some bugs in speech-to-text

--- a/app/src/main/res/layout/activity_upsert_note.xml
+++ b/app/src/main/res/layout/activity_upsert_note.xml
@@ -87,6 +87,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/voice_rec" />
+
+            <ImageView
+                android:id="@+id/imgClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imgDelete"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/note_clear" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
