--- a/app/src/main/res/layout/activity_upsert_note.xml
+++ b/app/src/main/res/layout/activity_upsert_note.xml
@@ -65,38 +65,48 @@
 
             <ImageView
                 android:id="@+id/imgDelete"
-                android:layout_width="46dp"
-                android:layout_height="47dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imgSave"
+                app:layout_constraintEnd_toStartOf="@+id/imgClear"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/note_delete" />
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/note_delete"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageView
                 android:id="@+id/imgRecord"
-                android:layout_width="46dp"
-                android:layout_height="47dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
-                android:visibility="invisible"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imgSave"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/voice_rec" />
+                app:srcCompat="@drawable/voice_rec"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageView
                 android:id="@+id/imgClear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imgDelete"
+                app:layout_constraintEnd_toStartOf="@+id/imgRecord"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/note_clear" />
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/note_clear"
+                tools:ignore="SpeakableTextPresentCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
