--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -145,4 +145,8 @@
         <color name="darkblue">#00008B</color>
         <color name="navy">#000080</color>
         <color name="black">#000000</color>
+        <color name="DimGray">#696969</color>
+        <color name="light_grey">#D3D3D3</color>
+        <color name="OrangeRed">#FF4500</color>
+        <color name="transparant">#00FFFFFF</color>
 </resources>
